탑, 사이드바 개발

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,5 +13,4 @@
  */
 @import 'app/components/wrapper';
 @import 'app/components/topnav';
-@import 'app/components/offbar';
-@import 'app/components/reader';
+@import 'app/components/sidebar';
