--- a/src/styles/app/common/_index.scss
+++ b/src/styles/app/common/_index.scss
@@ -11,3 +11,31 @@ body {
 a:hover {
   cursor: pointer;
 }
+
+.bg-7blue {
+  background-color: $blue !important;
+}
+
+.bg-7brown {
+  background-color: $brown !important;
+}
+
+.bg-7green {
+  background-color: $green !important;
+}
+
+.bg-7grey {
+  background-color: $grey !important;
+}
+
+.bg-7purple {
+  background-color: $purple !important;
+}
+
+.bg-7red {
+  background-color: $red !important;
+}
+
+.bg-7yellow {
+  background-color: $yellow !important;
+}
