--- a/src/styles/app/components/_topnav.scss
+++ b/src/styles/app/components/_topnav.scss
@@ -2,6 +2,10 @@
   // border-bottom: 1px solid #d9d9d9;
   background-color: #ffffff;
   box-shadow: 0 0 10px #d9d9d9;
-  height: 86px;
+  height: 100%;
   // color: #ffffff;
+
+  > .progress {
+    border-radius: 0;
+  }
 }
