톤앤 매너 최종 적용 프리마리, 세컨다리 적용완료

--- a/src/styles/app/common/_index.scss
+++ b/src/styles/app/common/_index.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');
 html {
   margin: 0;
   padding: 0;
@@ -6,6 +7,8 @@ html {
 body {
   height: 100%;
   width: 100%;
+  font-family: 'Montserrat', sans-serif;
+  color: $text-secondary;
 }
 
 a:hover {
