--- a/src/styles/app/common/_variables.scss
+++ b/src/styles/app/common/_variables.scss
@@ -5,3 +5,13 @@ $grey: #95918c !default;
 $purple: #926eae !default;
 $red: #ee204d !default;
 $yellow: #fce883 !default;
+
+$white: #ffffff !default;
+$primary: #031c32;
+
+$bg-wrapper: #ededed;
+$bg-topnav: #031c32;
+$bg-sidebar: $white;
+
+$text-primary: $primary;
+$text-secondary: $white;
