--- a/src/styles/app/components/_wrapper.scss
+++ b/src/styles/app/components/_wrapper.scss
@@ -1,7 +1,3 @@
 .wrapper {
-  .col {
-    padding: 0;
-    // transition: all 0.6s ease 0s;
-    transition: width 0.35s linear;
-  }
+  background-color: $bg-wrapper;
 }
