--- a/src/styles/app/components/_topnav.scss
+++ b/src/styles/app/components/_topnav.scss
@@ -3,7 +3,7 @@
   // background-color: #005f40;
   background-color: $bg-topnav;
   box-shadow: 0 0 10px #d9d9d9;
-  height: 100%;
+  height: $topnav-hg;
   color: $text-secondary;
 
   h1 {
