1차 개발 완료 배포 ㅗ안료

--- a/src/styles/app/_index.scss
+++ b/src/styles/app/_index.scss
@@ -54,3 +54,31 @@ a:hover {
 .bg-7yellow {
   background-color: $yellow !important;
 }
+
+.text-7blue {
+  color: $blue !important;
+}
+
+.text-7brown {
+  color: $brown !important;
+}
+
+.text-7green {
+  color: $green !important;
+}
+
+.text-7grey {
+  color: $grey !important;
+}
+
+.text-7purple {
+  color: $purple !important;
+}
+
+.text-7red {
+  color: $red !important;
+}
+
+.text-7yellow {
+  color: $yellow !important;
+}
